update answer controllers and implement search features on discussion document