@@ -5,7 +5,6 @@ import co.elastic.clients.elasticsearch.ElasticsearchClient;
 import co.elastic.clients.elasticsearch._types.FieldValue;
 import co.elastic.clients.elasticsearch._types.SortOptions;
 import co.elastic.clients.elasticsearch._types.SortOrder;
-import co.elastic.clients.elasticsearch._types.query_dsl.MatchQuery;
 import co.elastic.clients.elasticsearch._types.query_dsl.Query;
 import co.elastic.clients.elasticsearch._types.query_dsl.TermsQueryField;
 import co.elastic.clients.elasticsearch.core.SearchRequest;
@@ -13,7 +12,6 @@ import co.elastic.clients.elasticsearch.core.SearchResponse;
 import co.elastic.clients.elasticsearch.core.search.Hit;
 import com.example.EnglishAppAPI.entities.EnglishLevel;
 import com.example.EnglishAppAPI.entities.Interest;
-import com.example.EnglishAppAPI.entities.UserEntity;
 import com.example.EnglishAppAPI.entities.indexes.UserDocument;
 import com.example.EnglishAppAPI.exceptions.NotFoundException;
 import com.example.EnglishAppAPI.mapstruct.mappers.UserMapper;
@@ -22,23 +20,14 @@ import com.example.EnglishAppAPI.responses.ApiResponse;
 import com.example.EnglishAppAPI.responses.ApiResponseStatus;
 import com.example.EnglishAppAPI.services.interfaces.ISearchService;
 import com.example.EnglishAppAPI.utils.ElasticsearchUtils;
-import org.elasticsearch.index.query.BoolQueryBuilder;
-import org.elasticsearch.index.query.QueryBuilder;
-import org.elasticsearch.index.query.QueryBuilders;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
+import java.util.Comparator;
 import java.util.List;
-import java.util.Objects;
-import java.util.Set;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 @Service
 public class SearchService implements ISearchService {
@@ -69,41 +58,47 @@ public class SearchService implements ISearchService {
 
     @Override
     public ResponseEntity<?> recommendUsersBasedOnCommonInterests(Long currentUserId, int page, int size) throws IOException {
-        List<String> interestNames = userRepository.findById(currentUserId).orElseThrow(() -> new NotFoundException("cant find the user")).getInterests().stream().map(Interest::getInterestName).toList();
-        
-        Supplier<Query> interestQuerySupplier = () -> Query.of(q -> q.terms(t -> t.field("interests.name")
-                .terms(TermsQueryField.of(tf -> tf.value(interestNames.stream().map(FieldValue::of).collect(Collectors.toList()))))));
-
-        Supplier<Query> exclusionQuerySupplier = ElasticsearchUtils.createExclusionQuery(currentUserId, "id");
-
-        Supplier<Query> combinedQuerySupplier = () -> Query.of(q -> q.bool(b -> b
-                .must(interestQuerySupplier.get())
-                .mustNot(exclusionQuerySupplier.get())
-        ));
+        List<String> names = userRepository.findById(currentUserId).orElseThrow(() -> new NotFoundException("not found")).getInterests().stream().map(Interest::getInterestName).toList();
+        TermsQueryField termsQueryField = new TermsQueryField.Builder()
+                .value(names.stream().map(FieldValue::of).toList())
+                .build();
+        Supplier<Query> query = () -> Query.of(q -> q.terms(t -> t.field("interests.interest_name.keyword").terms(termsQueryField)));
 
         SearchRequest searchRequest = new SearchRequest.Builder()
                 .index("users_index")
-                .query(combinedQuerySupplier.get())
-                .from(page*size)
+                .query(query.get())
+                .from(page)
                 .size(size)
                 .sort(SortOptions.of(so -> so.field(f -> f.field("followersCount").order(SortOrder.Desc))))
                 .build();
-
-        SearchResponse<UserDocument> response = elasticsearchClient.search(searchRequest, UserDocument.class);
+        SearchResponse<UserDocument> response = null;
+        try {
+            response = elasticsearchClient.search(searchRequest, UserDocument.class);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
         List<Hit<UserDocument>> hits = response.hits().hits();
-        List<UserDocument> userDocuments = hits.stream().map(Hit::source).collect(Collectors.toList());
-        return ResponseEntity.ok(new ApiResponse(ApiResponseStatus.SUCCESS, "recommend users", userDocuments));
+        List<UserDocument> userDocuments = hits.stream().map(Hit::source).toList();
+        List<UserDocument> results = userDocuments.stream()
+                .filter(user -> !user.getId().equals(currentUserId))
+                .peek(user -> {
+                    long sharedInterestsCount = user.getInterests().stream()
+                            .filter(interest -> names.contains(interest.getInterest_name()))
+                            .count();
+                    user.setSharedInterestCount(sharedInterestsCount);
+                })
+                .sorted(Comparator.comparingLong(UserDocument::getSharedInterestCount).reversed()
+                        .thenComparingInt(UserDocument::getFollowersCount).reversed())
+                .toList();
+        return ResponseEntity.ok(new ApiResponse(ApiResponseStatus.SUCCESS, "recommend on common interests", results));
     }
 
     @Override
     public ResponseEntity<?> recommendUsersBasedOnEnglishLevel(Long currentUserId, int pageNumber, int pageSize) {
         EnglishLevel englishLevel = userRepository.findById(currentUserId)
                 .orElseThrow(() -> new NotFoundException("cant find the user")).getEnglishLevel();
-//        Pageable pageable = PageRequest.of(pageNumber, pageSize, Sort.by(Sort.Direction.DESC, "followersCount"));
-//        Page<UserEntity> userEntities = userRepository.findUsersByEnglishLevelAndSortByFollowersCountDesc(englishLevel, pageable);
-//        return ResponseEntity.ok(new ApiResponse(ApiResponseStatus.SUCCESS, "get users by english level", userEntities.map(userMapper::toFindDto)));
 
-        Supplier<Query> englishLevelQuerySupplier = () -> Query.of(q -> q.term(t -> t.field("englishLevel").value(englishLevel.getLevelName())));
+        Supplier<Query> englishLevelQuerySupplier = () -> Query.of(q -> q.match(t -> t.field("englishLevel").query(englishLevel.getLevelName())));
 
         Supplier<Query> exclusionQuerySupplier = ElasticsearchUtils.createExclusionQuery(currentUserId, "id");
 
